--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
     "@fastify/cors": "^11.0.1",
     "fastify": "^5.4.0",
     "mysql2": "^3.14.1"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.12",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   }
-
-  
 }
-
